// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component should handle children as a label: children label checkbox 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label="lorem ipsum"
    class="pf-c-check__input"
    id="generatedid-"
    name="generatedid-"
    type="checkbox"
    value=""
  />
  <label
    class="pf-c-check__label"
    for="generatedid-"
  >
    lorem ipsum
  </label>
</div>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: active 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label=""
    class="pf-c-check__input"
    id="generatedid-"
    name="generatedid-"
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: checked 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label=""
    class="pf-c-check__input"
    id="generatedid-"
    name="generatedid-"
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: disabled 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label=""
    class="pf-c-check__input"
    disabled=""
    id="generatedid-"
    name="generatedid-"
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: readOnly 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label=""
    class="pf-c-check__input"
    id="generatedid-"
    name="generatedid-"
    readonly=""
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component should render a basic component: basic component 1`] = `
<div
  class="pf-c-check"
>
  <input
    aria-invalid="false"
    aria-label=""
    class="pf-c-check__input"
    id="generatedid-"
    name="generatedid-"
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component should return an emulated onChange event: emulated event 1`] = `
Object {
  "checked": true,
  "currentTarget": Object {},
  "id": "generatedid-",
  "keyCode": undefined,
  "name": "generatedid-",
  "persist": [Function],
  "target": Object {},
  "value": undefined,
}
`;
